--- a/_sass/includes/small.scss
+++ b/_sass/includes/small.scss
@@ -1,18 +1,9 @@
 @media print, screen and (max-width: 767px) and (min-width: 100px) {
   .wrapper {
     margin: auto;
-    width: auto;
+    width: inherit;
+    height: inherit;
     padding: 30px 20px !important;
-
-  }
-
-  body {
-    width: 100%;
-    height: 100%;
-    
-    h1 {margin: 20px 0;}
-
-    p { margin: 5px 0; }
   }
 
 
