--- a/_sass/includes/styles.scss
+++ b/_sass/includes/styles.scss
@@ -1,6 +1,6 @@
 .wrapper {
-  width: var(--wrapper-width);
-  margin: 0 auto;
+  max-width: var(--wrapper-width);
+  margin: auto;
 }
 
 *,
@@ -9,23 +9,19 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-
 }
 
 html {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  overflow-y: scroll;
 }
 
 
 html,
 body {
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
-
 }
 
 
